--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -32,4 +33,51 @@
 .adres {
     font-style: normal
 }
-
+.pierwszasekcja {
+    background-color:#2e2f42;
+}
+.naglowek1 {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.przycisk1 {
+    background-color: #4D5AE5;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color:#ffffff;
+    cursor: pointer;
+}
+body {
+    font-family: "Roboto", sans-serif
+}
+.przycisk1:hover{
+    background-color: #404BBF;
+}
+.przycisk1:focus {
+    background-color: #404BBF
+}
+.naglowek2 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
+}
+.p1 {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#434455;
+}
+.naglowek3 {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color:#2e2f42;
+}
