--- a/css/styles.css
+++ b/css/styles.css
@@ -81,9 +81,7 @@ body {
     text-transform: capitalize;
     color:#2e2f42;
 }
-.page-footer {
-    background-color:#2e2f42;
-}
+
 .fklasa {
     font-family: "Raleway";
     font-weight: 800;
@@ -98,16 +96,9 @@ body {
     color:#f4f4fd;
     letter-spacing: 0.02em;
 }
-.logo2 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height:1.5;
-    color:#F4F4FD;
+.akapit {
+    line-height: 1.5;
+    color: #F4F4FD;
     letter-spacing: 0.02em;
 }
 .page-footer {
