--- a/css/styles.css
+++ b/css/styles.css
@@ -106,3 +106,31 @@ body {
     background-color:#2e2f42;
 
 }
+.section11 {
+   background-color: #2e2f42;
+
+}
+.naglowekhtml {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.przycisk11 {
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    
+    cursor: pointer
+}
+.przycisk11:focus {
+    background-color: #404BBF;
+}
+.przycisk11:hover {
+    background-color: #404BBF;
+}
