--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,29 @@ body {
 .przycisk11:hover {
     background-color: #404BBF;
 }
+.sekcja3 {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+
+}
+.sekcja4 {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+.nagloweksekcja4 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.akapitlista4 {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
