--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-.logo {
+.logo link {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
