--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -106,7 +104,7 @@ body {
     background-color:#2e2f42;
 
 }
-.section11 {
+.sectionone {
    background-color: #2e2f42;
 
 }
@@ -117,7 +115,7 @@ body {
     letter-spacing: 0.02em;
     color: #ffffff;
 }
-.przycisk11 {
+.buttonone {
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -128,10 +126,10 @@ body {
     
     cursor: pointer
 }
-.przycisk11:focus {
+.buttonone:focus {
     background-color: #404BBF;
 }
-.przycisk11:hover {
+.buttonone:hover {
     background-color: #404BBF;
 }
 .sekcja2 {
