--- a/css/styles.css
+++ b/css/styles.css
@@ -132,21 +132,21 @@ body {
 .buttonone:hover {
     background-color: #404BBF;
 }
-.sekcja2 {
+.sectiontwo {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.sekcja2akapit {
+.sectiontwoa {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;   
 }
 
-.sekcja3 {
+.sectionthree {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -154,20 +154,20 @@ body {
     text-transform: capitalize;
 
 }
-.sekcja4 {
+.sectionfour {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
-.nagloweksekcja4 {
+.headersectionfour {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
 }
-.akapitlista4 {
+.plistfour {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
