--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,10 @@
 .adres {
     font-style: normal
 }
-.pierwszasekcja {
+.firstsectionportfolio {
     background-color:#2e2f42;
 }
-.naglowek1 {
+.headerone {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
