--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,25 @@
     color: #4d5ae5;
     text-decoration: none
 }
-.studio{
+.link {
+    text-decoration: none;
+}
+.spanone {
     color:#2e2f42;
+
+}
+.firstlink {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
+    text-decoration: none
+}
+.firstlink:focus {
+    color: #404bbf;
+}
+.firstlink:hover {
+    color: #404bbf;
 }
 .list {
     list-style: none
@@ -28,7 +45,7 @@
 .link-one link:focus {
     color:#404bbf;
 }
-.adres {
+.list {
     font-style: normal
 }
 .firstsectionportfolio {
@@ -155,11 +172,15 @@ body {
 
 }
 .sectionfour {
+    color: #2e2f42;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+}
+.sectionfourcolor {
+    background-color: #F4F4FD; 
 }
 .headersectionfour {
     font-weight: 500;
@@ -171,4 +192,5 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    background-color:#FFFFFF;
 }
