--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     color: #4d5ae5;
     text-decoration: none
 }
-.link {
+.logo link {
     text-decoration: none;
 }
 .spanone {
@@ -179,6 +179,7 @@
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: #2e2f42;
 
 }
 .sectionfour {
