--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,9 @@
 .body {
     font-family: "Roboto", sans-serif;
     color:#434455;
-    
+    font-family: "Roboto", sans-serif;
+    color: var(--sectionn-heading-color);
+    background-color: var(--background-color)
 }
 :root {
     --background-color:#FFFFFF;
@@ -204,4 +206,9 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     background-color:#FFFFFF;
+}
+.link {
+    line-height: 1,5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
