--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@
     color:#ffffff;
     cursor: pointer;
 }
-.body {
+body {
     font-family: "Roboto", sans-serif;
     color:#434455;
     font-family: "Roboto", sans-serif;
