--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,7 @@ body {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: #2E2F42;
 }
 .plistfour {
     font-size: 16px;
@@ -225,5 +226,5 @@ body {
     background-color:#FFFFFF;
 }
 .info {
-    
+
 }
