--- a/css/styles.css
+++ b/css/styles.css
@@ -226,5 +226,14 @@ body {
     background-color:#FFFFFF;
 }
 .info {
-
+    font-size: 16px;
+     line-height: 1.5; 
+     letter-spacing: 0.02em;
+      color: #434455
+}
+.info:hover{
+    color: #404BBF
+}
+.info:focus{
+    color: #404BBF
 }
