--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ body {
     font-size: 20px; 
     line-height: 1.2; 
     letter-spacing: 0.02em; 
-    color: #232F42
+    color: #2E2F42;
 }
 .classli {
     background-color:#FFFFFF;
