--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
     letter-spacing: 0.02em;
     color:#2e2f42;
 }
-.p1 {
+.pp1 {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
