--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@
     font-style: normal
 }
 .firstsectionportfolio {
-    background-color:#2e2f42;
 }
 .headerone {
     font-size: 56px;
@@ -59,12 +58,15 @@
     color: #ffffff;
 }
 .przycisk {
-    background-color: #4D5AE5;
+    color: #4d5ae5;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color:#ffffff;
     cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    background-color:#F4F4FD ;
 }
 body {
     font-family: "Roboto", sans-serif;
