--- a/css/styles.css
+++ b/css/styles.css
@@ -83,14 +83,14 @@ body {
     color:#434455;
     font-family: "Roboto", sans-serif;
     color: var(--sectionn-heading-color);
-    background-color: var(--background-color)
+    background-color: var(--background-color);
 }
 :root {
     --background-color:#FFFFFF;
     --logo-main-color:#4d5ae5;
     --background-color-section: #232f42;
     --sectionn-heading-color:#434455;
-    --footer-color: #F4F4FD;
+    background-color:var(--footer-color);
     --link-hover-focus: #404bbf;
     --color:var(--color:#2E2F42;)
 
