--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
     color:#f4f4fd;
     letter-spacing: 0.02em;
 }
-.akapit {
+.aaaa {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
