--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@
     display: flex;
     gap: 40px;
 }
-.link-one link  {
+.link-one, link  {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
