--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.klasadlaheadera {
+.classforheader {
     border-bottom: 1px solid #e7e9fc;
 }
 .kontener {
@@ -96,7 +96,7 @@ body {
     --color:var(--color:#2E2F42;)
 
 }
-.przycisk {
+.button {
     color: #4d5ae5;
     font-weight: 500;
     line-height: 1.5;
@@ -106,14 +106,11 @@ body {
     font-size: 16px;
     background-color:#F4F4FD ;
 }
-.przycisk:hover {
+.button:hover, button:focus  {
     background-color: #404BBF;
     color:#FFFFFF;
 }
-.przycisk:focus {
-    background-color: #404BBF;
-    color: #FFFFFF;
-}
+
 .headerthree {
     font-size: 36px;
     line-height: 1.11;
